DuPont DevSB/src/objects/SFDC_FollowOnQuestion__c.object
<CustomObject>
    <description>Junction object representing a list of follow on questions to ask for a given answer.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The answer ID field in the junction object.</description>
        <label>Answer</label>
        <referenceTo>SFDC_Answer__c</referenceTo>
        <relationshipLabel>Follow On Questions</relationshipLabel>
        <relationshipName>R00N30000001GaNBEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuestionOrder__c</fullName>
        <label>QuestionOrder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The question field on the junction object.</description>
        <label>Question</label>
        <referenceTo>SFDC_Questions__c</referenceTo>
        <relationshipLabel>Follow On Questions</relationshipLabel>
        <relationshipName>FollowOnQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Script</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>FollowOnQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fDefaultAnswer__c</fullName>
        <formula>Question__r.DefaultAnswer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fIsRequired__c</fullName>
        <formula>IF(Question__r.IsRequired__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSaveToField__c</fullName>
        <formula>Question__r.Save_To_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Save To Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fShortName__c</fullName>
        <formula>Question__r.ShortName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShortName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fWriteToField__c</fullName>
        <description>used for showing in Follow-Up Related list on script</description>
        <formula>Question__r.WriteToField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WriteTo Field</label>
        <type>Text</type>
    </fields>
    <label>FollowOnQuestion</label>
    <nameField>
        <label>Follow On Question ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FollowOnQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>